--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Домашняя работа</title>
     <link rel="stylesheet" href="./css/styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
@@ -14,115 +14,123 @@
 
   <body>
     <!--Шапка сайта-->
-    <header>
-      <a href="" lang="en" class="logo"><span>Web</span>Studio</a>
-      <nav>
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
+    <header class="page-header">
+      <div class="container">
+        <a href="./index.html" lang="en" class="logo"><span>Web</span>Studio</a>
+        <nav>
+          <ul class="site-nav list">
+            <li class="item"><a href="./index.html" class="link">Студия</a></li>
+            <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
+            <li class="item"><a href="#" class="link">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="contacts list">
+          <li class="item">
+            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+          </li>
+          <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
-      </nav>
-      <ul class="contacts list">
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-      </ul>
+      </div>
     </header>
 
     <main>
       <section>
-        <h1>Наши проекты</h1>
-        <ul class="list">
-          <li>
-            <button type="button" class="button">Все</button>
-          </li>
-          <li>
-            <button type="button" class="button">Веб-сайты</button>
-          </li>
-          <li>
-            <button type="button" class="button">Приложения</button>
-          </li>
-          <li>
-            <button type="button" class="button">Дизайн</button>
-          </li>
-          <li>
-            <button type="button" class="button">Маркетинг</button>
-          </li>
-        </ul>
-        <ul class="project list">
-          <li>
-            <a href="" class="link">
-              <img src="./images/img1.jpg" alt="example1" width="370" height="294" />
-              <h2 class="title">Технокряк</h2>
-              <p class="text">Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="link">
-              <img src="./images/img2.jpg" alt="example2" width="370" height="294" />
-              <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-              <p class="text">Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="link">
-              <img src="./images/img3.jpg" alt="example3" width="370" height="294" />
-              <h2 class="title">Ресторан <span>Seafood</span></h2>
-              <p class="text">Приложение</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="link">
-              <img src="./images/img4.jpg" alt="example4" width="370" height="294" />
-              <h2 class="title">Проект <span>Prime</span></h2>
-              <p class="text">Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="link">
-              <img src="./images/img5.jpg" alt="example5" width="370" height="294" />
-              <h2 class="title">Проект <span>Boxes</span></h2>
-              <p class="text">Приложение</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="link">
-              <img src="./images/img6.jpg" alt="example6" width="370" height="294" />
-              <h2 lang="en" class="title">Inspiration has no Borders</h2>
-              <p class="text">Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="link">
-              <img src="./images/img7.jpg" alt="example7" width="370" height="294" />
-              <h2 class="title">Издание <span lang="en">Limited Edition</span></h2>
-              <p class="text">Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="link">
-              <img src="./images/img8.jpg" alt="example8" width="370" height="294" />
-              <h2 class="title">Проект <span>LAB</span></h2>
-              <p class="text">Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="link">
-              <img src="./images/img9.jpg" alt="example9" width="370" height="294" />
-              <h2 lang="en" class="title">Growing Business</h2>
-              <p class="text">Приложение</p>
-            </a>
-          </li>
-        </ul>
+        <div class="container">
+          <h1>Наши проекты</h1>
+          <ul class="list">
+            <li>
+              <button type="button" class="btn">Все</button>
+            </li>
+            <li>
+              <button type="button" class="btn">Веб-сайты</button>
+            </li>
+            <li>
+              <button type="button" class="btn">Приложения</button>
+            </li>
+            <li>
+              <button type="button" class="btn">Дизайн</button>
+            </li>
+            <li>
+              <button type="button" class="btn">Маркетинг</button>
+            </li>
+          </ul>
+          <ul class="project list">
+            <li>
+              <a href="" class="link">
+                <img src="./images/img1.jpg" alt="example1" width="370" height="294" />
+                <h2 class="title">Технокряк</h2>
+                <p class="text">Веб-сайт</p>
+              </a>
+            </li>
+            <li>
+              <a href="" class="link">
+                <img src="./images/img2.jpg" alt="example2" width="370" height="294" />
+                <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                <p class="text">Дизайн</p>
+              </a>
+            </li>
+            <li>
+              <a href="" class="link">
+                <img src="./images/img3.jpg" alt="example3" width="370" height="294" />
+                <h2 class="title">Ресторан <span>Seafood</span></h2>
+                <p class="text">Приложение</p>
+              </a>
+            </li>
+            <li>
+              <a href="" class="link">
+                <img src="./images/img4.jpg" alt="example4" width="370" height="294" />
+                <h2 class="title">Проект <span>Prime</span></h2>
+                <p class="text">Маркетинг</p>
+              </a>
+            </li>
+            <li>
+              <a href="" class="link">
+                <img src="./images/img5.jpg" alt="example5" width="370" height="294" />
+                <h2 class="title">Проект <span>Boxes</span></h2>
+                <p class="text">Приложение</p>
+              </a>
+            </li>
+            <li>
+              <a href="" class="link">
+                <img src="./images/img6.jpg" alt="example6" width="370" height="294" />
+                <h2 lang="en" class="title">Inspiration has no Borders</h2>
+                <p class="text">Веб-сайт</p>
+              </a>
+            </li>
+            <li>
+              <a href="" class="link">
+                <img src="./images/img7.jpg" alt="example7" width="370" height="294" />
+                <h2 class="title">Издание <span lang="en">Limited Edition</span></h2>
+                <p class="text">Дизайн</p>
+              </a>
+            </li>
+            <li>
+              <a href="" class="link">
+                <img src="./images/img8.jpg" alt="example8" width="370" height="294" />
+                <h2 class="title">Проект <span>LAB</span></h2>
+                <p class="text">Маркетинг</p>
+              </a>
+            </li>
+            <li>
+              <a href="" class="link">
+                <img src="./images/img9.jpg" alt="example9" width="370" height="294" />
+                <h2 lang="en" class="title">Growing Business</h2>
+                <p class="text">Приложение</p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a href="" lang="en" class="logo"><span>Web</span>Studio</a>
-      <address class="address">
-        г. Киев, пр-т Леси Украинки, 26 <br />
-        <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a><br />
-        <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-      </address>
+      <div class="container">
+        <a href="" lang="en" class="logo"><span>Web</span>Studio</a>
+        <address class="address">
+          г. Киев, пр-т Леси Украинки, 26 <br />
+          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a><br />
+          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
