--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <!--Шапка сайта-->
     <header class="header">
-      <div class="container">
+      <div class="container nav">
         <a href="" lang="en" class="logo"><span>Web</span>Studio</a>
         <nav>
           <ul class="site-nav list">
@@ -38,7 +38,7 @@
 
     <main>
       <!--Герой-->
-      <section class="hero">
+      <section class="hero section">
         <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="btn">Заказать услугу</button>
@@ -49,25 +49,25 @@
         <div class="container">
           <h2 class="section-title">Наше преимущество</h2>
           <ul class="feature list">
-            <li>
+            <li class="item">
               <h3 class="title">Внимание к деталям</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title">Пунктуальность</h3>
               <p class="text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title">Планирование</h3>
               <p class="text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title">Современные технологии</h3>
               <p class="text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -77,33 +77,33 @@
         </div>
       </section>
       <!--Діяльність-->
-      <section>
+      <section class="section">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
-          <ul class="list">
-            <li>
+          <ul class="work list">
+            <li class="item">
               <img src="./images/box1.jpg" alt="работа на клавиатуре" width="370" height="294" />
             </li>
-            <li>
+            <li class="item">
               <img src="./images/box2.jpg" alt="работа на ноутбуке" width="370" height="294" />
             </li>
-            <li>
+            <li class="item">
               <img src="./images/box3.jpg" alt="работа на планшете" width="370" height="294" />
             </li>
           </ul>
         </div>
       </section>
       <!--Команда-->
-      <section class="team">
+      <section class="section team">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="team list">
-            <li>
+            <li class="item">
               <img src="./images/img.jpg" alt="Photo Product Designer" width="270" height="260" />
               <h3 class="title">Игорь Демьяненко</h3>
               <p lang="en" class="text">Product Designer</p>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/img(1).jpg"
                 alt="Photo Frontend Developer"
@@ -113,7 +113,7 @@
               <h3 class="title">Ольга Репина</h3>
               <p lang="en" class="text">Frontend Developer</p>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/img(2).jpg"
                 alt="Photo Product Marketinger"
@@ -123,7 +123,7 @@
               <h3 class="title">Николай Тарасов</h3>
               <p lang="en" class="text">Marketing</p>
             </li>
-            <li>
+            <li class="item">
               <img src="./images/img(3).jpg" alt="Photo UI Designer" width="270" height="260" />
               <h3 class="title">Михаил Ермаков</h3>
               <p lang="en" class="text">UI Designer</p>
