--- a/portfolio.html
+++ b/portfolio.html
@@ -14,8 +14,8 @@
 
   <body>
     <!--Шапка сайта-->
-    <header class="page-header">
-      <div class="container">
+    <header>
+      <div class="container nav">
         <a href="./index.html" lang="en" class="logo"><span>Web</span>Studio</a>
         <nav>
           <ul class="site-nav list">
@@ -34,84 +34,84 @@
     </header>
 
     <main>
-      <section>
+      <section class="section">
         <div class="container">
-          <h1>Наши проекты</h1>
-          <ul class="list">
-            <li>
+          <h1 class="section-title">Наши проекты</h1>
+          <ul class="buttons list">
+            <li class="item">
               <button type="button" class="btn">Все</button>
             </li>
-            <li>
+            <li class="item">
               <button type="button" class="btn">Веб-сайты</button>
             </li>
-            <li>
+            <li class="item">
               <button type="button" class="btn">Приложения</button>
             </li>
-            <li>
+            <li class="item">
               <button type="button" class="btn">Дизайн</button>
             </li>
-            <li>
+            <li class="item">
               <button type="button" class="btn">Маркетинг</button>
             </li>
           </ul>
-          <ul class="project list">
-            <li>
+          <ul class="projects list">
+            <li class="item">
               <a href="" class="link">
                 <img src="./images/img1.jpg" alt="example1" width="370" height="294" />
                 <h2 class="title">Технокряк</h2>
                 <p class="text">Веб-сайт</p>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link">
                 <img src="./images/img2.jpg" alt="example2" width="370" height="294" />
                 <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                 <p class="text">Дизайн</p>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link">
                 <img src="./images/img3.jpg" alt="example3" width="370" height="294" />
                 <h2 class="title">Ресторан <span>Seafood</span></h2>
                 <p class="text">Приложение</p>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link">
                 <img src="./images/img4.jpg" alt="example4" width="370" height="294" />
                 <h2 class="title">Проект <span>Prime</span></h2>
                 <p class="text">Маркетинг</p>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link">
                 <img src="./images/img5.jpg" alt="example5" width="370" height="294" />
                 <h2 class="title">Проект <span>Boxes</span></h2>
                 <p class="text">Приложение</p>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link">
                 <img src="./images/img6.jpg" alt="example6" width="370" height="294" />
                 <h2 lang="en" class="title">Inspiration has no Borders</h2>
                 <p class="text">Веб-сайт</p>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link">
                 <img src="./images/img7.jpg" alt="example7" width="370" height="294" />
                 <h2 class="title">Издание <span lang="en">Limited Edition</span></h2>
                 <p class="text">Дизайн</p>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link">
                 <img src="./images/img8.jpg" alt="example8" width="370" height="294" />
                 <h2 class="title">Проект <span>LAB</span></h2>
                 <p class="text">Маркетинг</p>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link">
                 <img src="./images/img9.jpg" alt="example9" width="370" height="294" />
                 <h2 lang="en" class="title">Growing Business</h2>
