Уточнення після зауважень 27.06.22

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="header">
       <div class="container nav">
         <a href="" lang="en" class="logo"><span>Web</span>Studio</a>
-        <nav class="nav">
+        <nav class="nav-list">
           <ul class="site-nav list">
             <li class="item"><a href="./index.html" class="link current">Студия</a></li>
             <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
