--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     <header class="header">
       <div class="container nav">
         <a href="./index.html" lang="en" class="logo"><span>Web</span>Studio</a>
-        <nav class="nav">
+        <nav class="nav-list">
           <ul class="site-nav list">
             <li class="item"><a href="./index.html" class="link">Студия</a></li>
             <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
