Коригування згідно зауважень

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
     <main>
       <section class="section">
         <div class="container">
-          <h1 hidden>Наши проекты</h1>
+          <h1 class="visually-hidden">Наши проекты</h1>
           <ul class="buttons list">
             <li class="item">
               <button type="button" class="btn">Все</button>
