--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <!--Преимущества-->
       <section class="section">
         <div class="container">
-          <h2 hidden>Наше преимущество</h2>
+          <h2 class="visually-hidden">Наше преимущество</h2>
           <ul class="feature list">
             <li class="item">
               <h3 class="title">Внимание к деталям</h3>
@@ -77,7 +77,7 @@
         </div>
       </section>
       <!--Діяльність-->
-      <section class="section">
+      <section class="section work">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="work list">
@@ -144,8 +144,8 @@
       <div class="container">
         <a href="" lang="en" class="logo"><span>Web</span>Studio</a>
         <address class="address">
-          г. Киев, пр-т Леси Украинки, 26<br />
-          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a><br />
+          г. Киев, пр-т Леси Украинки, 26
+          <a href="mailto:info@devstudio.com" class="link mail">info@devstudio.com</a>
           <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
         </address>
       </div>
