--- a/portfolio.html
+++ b/portfolio.html
@@ -148,8 +148,8 @@
       <div class="container">
         <a href="" lang="en" class="logo"><span>Web</span>Studio</a>
         <address class="address">
-          г. Киев, пр-т Леси Украинки, 26 <br />
-          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a><br />
+          г. Киев, пр-т Леси Украинки, 26
+          <a href="mailto:info@devstudio.com" class="link mail">info@devstudio.com</a>
           <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
         </address>
       </div>
